# swiip-keep

./: README.md
client/: package.json  pnpm-lock.yaml
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  todo.rs
client/src/components/: todos.svelte
client/src/routes/: +page.svelte
server/: .vercelignore  Cargo.toml  package.json  vercel.json
server/api/: handler.rs
server/src/: get.rs  lib.rs  main.rs  redis.rs  serialization.rs  set.rs  todo.rs
