[package]
name = "swiip_keep_server"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1" }
redis = { version = "0.26.1", features = ["tls-native-tls"] }
regex = "1.10.6"
http = "1.1.0"
rmp-serde = "1.3.0"
serde = "1.0.209"
reqwest = { version = "0.12.7", features = ["blocking"] }

[[bin]]
name = "main"
path = "src/main.rs"

# You can specify a library for shared logic here (optional)
[lib]
path = "src/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "api/handler.rs"

# Note that you need to provide unique names for each binary:
# [[bin]]
# name = "user-id"
# path = "api/user/[id].rs"
#
# [[bin]]
# name = "group-id"
# path = "api/group/[id].rs"
